--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,11 +12,13 @@
  *
  *= require_tree .
  *= require_self
- *= require fullcalendar
  */
 
  * {
   box-sizing: border-box;
  }
  
- 
+ *= require_tree .
+ *= require_self
+ *= require fullcalendar
+ */
